# Crispitek

./: .gitignore  CMakeLists.txt  README.md  crispitek
glfw/: cmake_uninstall.cmake
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
resources/Shaders/: frag.glsl
src/: main.cpp
src/Renderer/: Renderer.cpp  Renderer.h  Window.cpp  Window.h  mesh.cpp  mesh.h  model.cpp  model.h
